--- a/flowersgallery/templates/home.html
+++ b/flowersgallery/templates/home.html
@@ -1,13 +1,76 @@
-<!DOCTYPE html>
+{% load static %}
+
+<!DOCTYPE HTML>
+<!--
+	Editorial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-    <head>
-        <title>Flower Gallery</title>
-    </head>
-    <body>
-        {% if counter > 15 %}
-        <h3>The counter is {{ counter }}</h3>
-        {% else %}
-        <h1>Hello, World!</h1>
-        {% endif %}
-    </body>
+	<head>
+		<title>Flower Gallary</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+	</head>
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+                        <!-- Header -->
+                            <header id="header">
+                                <a href="index.html" class="logo"><strong>Flower Gallary</strong></a>
+                                <ul class="icons">
+                                    <li></li>
+                                    <li><a href="#" class="icon solid fa-sign-in-alt"><span class="label">Login</span></a></li>
+                                    <li><a href="#" class="icon solid fa-sign-out-alt"><span class="label">Logout</span></a></li>
+                                    <li><a href="#" class="icon solid fa-language"><span class="label">Language</span></a></li>
+                                </ul>
+                            </header>
+                        <!-- Section -->
+                            <section>
+                                <div class="posts">
+                                    {% for flower in flowers %}
+                                    <article>
+                                        <a href="#" class="image"><img src="{{ flower.image.url }}" alt="" /></a>
+                                        <h3>{{ flower.title }}</h3>
+                                        <p>{{ flower.description }}</p>
+                                        <ul class="actions">
+                                            <li><a href="#" class="button">More</a></li>
+                                        </ul>
+                                    </article>
+                                    {% endfor %}
+                                    
+                                </div>
+                            </section>
+                            <div class="pagination">
+                                <span class="step-links">
+                                    {% if page_obj.has_previous %}
+                                        <a href="?page=1">&laquo; first</a>
+                                        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                                    {% endif %}
+                            
+                                    <span class="current">
+                                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                                    </span>
+                            
+                                    {% if page_obj.has_next %}
+                                        <a href="?page={{ page_obj.next_page_number }}">next</a>
+                                        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                                    {% endif %}
+                                </span>
+                            </div>
+						</div>
+					</div>
+			</div>
+		<!-- Scripts -->
+			<script src="{% static 'assets/js/jquery.min.js' %}"></script>
+			<script src="{% static 'assets/js/browser.min.js' %}"></script>
+			<script src="{% static 'assets/js/breakpoints.min.js' %}"></script>
+			<script src="{% static 'assets/js/util.js' %}"></script>
+			<script src="{% static 'assets/js/main.js' %}"></script>
+
+	</body>
 </html>
