lesson 9: add registration and login\logout views

--- a/flowersgallery/templates/detail.html
+++ b/flowersgallery/templates/detail.html
@@ -22,11 +22,13 @@
 						<div class="inner">
 							<!-- Header -->
 							<header id="header">
-								<a href="index.html" class="logo"><strong>Flower Gallary</strong></a>
+								<a href="/" class="logo"><strong>Flower Gallary</strong></a>
 								<ul class="icons">
-									<li></li>
-									<li><a href="#" class="icon solid fa-sign-in-alt"><span class="label">Login</span></a></li>
-									<li><a href="#" class="icon solid fa-sign-out-alt"><span class="label">Logout</span></a></li>
+									{% if user.is_authenticated %}
+									<li><a href="{% url 'logout' %}" class="icon solid fa-sign-out-alt"><span class="label">Logout</span></a> {{ user.username }}</li>
+									{% else %}
+									<li><a href="{% url 'login' %}" class="icon solid fa-sign-in-alt"><span class="label">Login</span></a></li>
+									{% endif %}
 									<li><a href="#" class="icon solid fa-language"><span class="label">Language</span></a></li>
 								</ul>
 							</header>
