--- a/flowersgallery/templates/detail.html
+++ b/flowersgallery/templates/detail.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load i18n %}
+
 <!DOCTYPE HTML>
 <!--
 	Editorial by HTML5 UP
@@ -29,17 +31,39 @@
 									{% else %}
 									<li><a href="{% url 'login' %}" class="icon solid fa-sign-in-alt"><span class="label">Login</span></a></li>
 									{% endif %}
-									<li><a href="#" class="icon solid fa-language"><span class="label">Language</span></a></li>
+									<li>
+                                        <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                                            {% get_current_language as LANGUAGE_CODE %}                                         
+                                            <input name="next" type="hidden" value="{{ request.get_full_path|slice:'3:' }}">
+                                            {% if LANGUAGE_CODE == 'ar' %}
+                                                <button type='submit' name='language' value='en' class="icon solid fa-language">
+                                                    <span class="label"></span>English
+                                                </button>
+                                            {% else %}
+                                                <button type='submit' name='language' value='ar' class="icon solid fa-language">
+                                                    <span class="label"></span>عربي
+                                                </button>
+                                            {% endif %}
+                                        </form>
+                                    </li>
 								</ul>
 							</header>
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>{{ flower.title }}</h1>
+										{% if LANGUAGE_CODE == 'ar' %}
+											<h1>{{ flower.title_ar }}</h1>
+										{% else %}
+											<h1>{{ flower.title }}</h1>
+										{% endif %}
 									</header>
 
 									<span class="image main"><img src="{{ flower.image.url }}" alt="" /></span>
-									<p>{{ flower.description }}</p>
+										{% if LANGUAGE_CODE == 'ar' %}
+											<p>{{ flower.description_ar }}</p>
+										{% else %}
+											<p>{{ flower.description }}</p>
+										{% endif %}
 								</section>
 						</div>
 					</div>
