--- a/flowersgallery/templates/registration/login.html
+++ b/flowersgallery/templates/registration/login.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load i18n %}
+
 <!DOCTYPE HTML>
 <!--
 	Editorial by HTML5 UP
@@ -21,14 +23,28 @@
 
                 <!-- Header -->
                     <header id="header">
-                        <a href="index.html" class="logo"><strong>Flower Gallary</strong></a>
+                        <a href="/" class="logo"><strong>Flower Gallary</strong></a>
                         <ul class="icons">
                             {% if user.is_authenticated %}
                             <li><a href="{% url 'logout' %}" class="icon solid fa-sign-out-alt"><span class="label">Logout</span></a></li>
                             {% else %}
                             <li><a href="{% url 'login' %}" class="icon solid fa-sign-in-alt"><span class="label">Login</span></a></li>
                             {% endif %}
-                            <li><a href="#" class="icon solid fa-language"><span class="label">Language</span></a></li>
+                            <li>
+                                <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
+                                    {% get_current_language as LANGUAGE_CODE %}                                         
+                                    <input name="next" type="hidden" value="{{ request.get_full_path|slice:'3:' }}">
+                                    {% if LANGUAGE_CODE == 'ar' %}
+                                        <button type='submit' name='language' value='en' class="icon solid fa-language">
+                                            <span class="label"></span>English
+                                        </button>
+                                    {% else %}
+                                        <button type='submit' name='language' value='ar' class="icon solid fa-language">
+                                            <span class="label"></span>عربي
+                                        </button>
+                                    {% endif %}
+                                </form>
+                            </li>
                         </ul>
                     </header>
 
