add registration url

--- a/flowersgallery/templates/registration/login.html
+++ b/flowersgallery/templates/registration/login.html
@@ -64,6 +64,7 @@
                                 </form>
                             </div>
                         </div>
+                        <p>{% trans 'You have not registered yet?' %}</p><a href="{% url 'register' %}">{% trans 'Register Here' %}</a>
                     </section>
 
                 </div>
