--- a/flowersgallery/templates/create_flower.html
+++ b/flowersgallery/templates/create_flower.html
@@ -20,7 +20,7 @@
             <!-- Main -->
             <div id="main">
                 <div class="inner">
-                    <form method="post">
+                    <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         {{ form }}
                         <input type="submit" value="Submit">
