--- a/flowersgallery/templates/home.html
+++ b/flowersgallery/templates/home.html
@@ -51,7 +51,9 @@
                                 <div class="posts">
                                     {% for flower in flowers %}
                                     <article>
+                                        {% if flower.image %}
                                         <a href="#" class="image"><img src="{{ flower.image.url }}" alt="" /></a>
+                                        {% endif %}
                                         {% if LANGUAGE_CODE == 'ar' %}
                                             <h3>{{ flower.title_ar }}</h3>
                                             <p>{{ flower.description_ar }}</p>
