--- a/flowersgallery/templates/detail.html
+++ b/flowersgallery/templates/detail.html
@@ -69,6 +69,7 @@
 											{% endfor %}
 											]
 										</div>
+										<div>{{ flower.user.username }}</div>
 										{% if LANGUAGE_CODE == 'ar' %}
 											<h1>{{ flower.title_ar }}</h1>
 										{% else %}
