--- a/flowersgallery/templates/update_flower.html
+++ b/flowersgallery/templates/update_flower.html
@@ -23,6 +23,8 @@
                     <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         {{ form }}
+						<br>
+						{{ test }}
                         <input type="submit" value="Update">
                     </form>
                 </div>
