--- a/flowersgallery/templates/home.html
+++ b/flowersgallery/templates/home.html
@@ -1,102 +1,48 @@
+{% extends "base.html" %}
 {% load static %}
 {% load i18n %}
 
-<!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Flower Gallary</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        <link rel="stylesheet" href="{% static 'css/main.css' %}" />
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-                        <!-- Header -->
-                            <header id="header">
-                                <a href="/" class="logo"><strong>Flower Gallary</strong></a>
-                                <ul class="icons">
-                                    {% if user.is_authenticated %}
-                                    <li><a href="{% url 'logout' %}" class="icon solid fa-sign-out-alt"><span class="label">Logout</span></a></li>
-                                    {% else %}
-                                    <li><a href="{% url 'login' %}" class="icon solid fa-sign-in-alt"><span class="label">Login</span></a></li>
-                                    {% endif %}
-                                    <li>
-                                        <form action="{% url 'set_language' %}" method="post">{% csrf_token %}
-                                            {% get_current_language as LANGUAGE_CODE %}                                         
-                                            <input name="next" type="hidden" value="{{ request.get_full_path|slice:'3:' }}">
-                                            {% if LANGUAGE_CODE == 'ar' %}
-                                                <button type='submit' name='language' value='en' class="icon solid fa-language">
-                                                    <span class="label"></span>English
-                                                </button>
-                                            {% else %}
-                                                <button type='submit' name='language' value='ar' class="icon solid fa-language">
-                                                    <span class="label"></span>عربي
-                                                </button>
-                                            {% endif %}
-                                        </form>
-                                    </li>
-                                </ul>
-                            </header>
-                        <!-- Section -->
-                            <section>
-                                <div class="posts">
-                                    {% for flower in flowers %}
-                                    <article>
-                                        {% if flower.image %}
-                                        <a href="#" class="image"><img src="{{ flower.image.url }}" alt="" /></a>
-                                        {% endif %}
-                                        {% if LANGUAGE_CODE == 'ar' %}
-                                            <h3>{{ flower.title_ar }}</h3>
-                                            <p>{{ flower.description_ar }}</p>
-                                        {% else %}
-                                            <h3>{{ flower.title }}</h3>
-                                            <p>{{ flower.description }}</p>
-                                        {% endif %}
-                                        <ul class="actions">
-                                            <li><a href="{% url 'gallery:flower-detail' flower.id %}" class="button">
-                                                {% trans 'More' %}
-                                            </a></li>
-                                        </ul>
-                                    </article>
-                                    {% endfor %}
-                                    
-                                </div>
-                            </section>
-                            <div class="pagination">
-                                <span class="step-links">
-                                    {% if page_obj.has_previous %}
-                                        <a href="?page=1">&laquo; first</a>
-                                        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-                                    {% endif %}
-                            
-                                    <span class="current">
-                                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                                    </span>
-                            
-                                    {% if page_obj.has_next %}
-                                        <a href="?page={{ page_obj.next_page_number }}">next</a>
-                                        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-                                    {% endif %}
-                                </span>
-                            </div>
-						</div>
-					</div>
-			</div>
-		<!-- Scripts -->
-			<script src="{% static 'js/jquery.min.js' %}"></script>
-			<script src="{% static 'js/browser.min.js' %}"></script>
-			<script src="{% static 'js/breakpoints.min.js' %}"></script>
-			<script src="{% static 'js/util.js' %}"></script>
-			<script src="{% static 'js/main.js' %}"></script>
+{% block content %}
+<!-- Section -->
+<section>
+    <div class="posts">
+        {% for flower in flowers %}
+        <article>
+            {% if flower.image %}
+            <a href="#" class="image"><img src="{{ flower.image.url }}" alt="" /></a>
+            {% endif %}
+            {% if LANGUAGE_CODE == 'ar' %}
+                <h3>{{ flower.title_ar }}</h3>
+                <p>{{ flower.description_ar }}</p>
+            {% else %}
+                <h3>{{ flower.title }}</h3>
+                <p>{{ flower.description }}</p>
+            {% endif %}
+            <ul class="actions">
+                <li><a href="{% url 'gallery:flower-detail' flower.id %}" class="button">
+                    {% trans 'More' %}
+                </a></li>
+            </ul>
+        </article>
+        {% endfor %}
+        
+    </div>
+</section>
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
 
-	</body>
-</html>
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
+{% endblock %}
