--- a/flowersgallery/gallery/static/css/main.css
+++ b/flowersgallery/gallery/static/css/main.css
@@ -2271,3 +2271,9 @@ button,
     border-top: 0;
     margin-top: 0;
     padding-top: 0; }
+
+  .form-group {
+    width: auto;
+    float: left;
+    margin: 2%;
+  }
